# langgraph-due-diligence

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-infra.yml
backend/: api.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentCard.tsx  InputScreen.tsx  MetaGrid.tsx  ProgressView.tsx  RecommendationBadge.tsx  ReportView.tsx  ScoreBar.tsx  ScoreTable.tsx  TeamColumn.tsx  VetoCallout.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/types/: events.ts
frontend/src/utils/: format.ts
infra/: main.bicep
reports/: autoresearch.md  fastapi.md  flask.md  requests-oauthlib.md
scripts/: smoke_filesystem.py  smoke_github.py  test_api.py  test_business_team.py  test_code_team.py  test_dependency_auditor.py  test_repo_analyzer.py  test_security_scanner.py  validate.py
src/: graph.py  llm.py  report_writer.py  state.py
src/agents/: contributor_activity.py  dependency_auditor.py  issue_health.py  readme_analyzer.py  repo_analyzer.py  security_scanner.py
src/teams/: business_team.py  code_team.py
src/tools/: filesystem.py  github.py  repo.py
