[project]
name = "tech-due-diligence"
version = "0.1.0"
description = "Hierarchical multi-agent system that produces a due diligence report for an open-source GitHub repo."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3",
    "requests>=2.31",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
